--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,5 +1,9 @@
 <style routerLink="user-list.component.css"></style>
 <a routerLink="create">Create</a>
+<div>
+  <input type="text" id="search" placeholder="Search...">
+  <button>Search</button>
+</div>
 <table>
   <tr>
     <th>#</th>
