--- a/src/app/book/book-edit/book-edit.component.html
+++ b/src/app/book/book-edit/book-edit.component.html
@@ -1,6 +1,6 @@
 
 <h1>Form Edit</h1>
-<a routerLink="">Back to book list</a>
+<button routerLink="">Back to book list</button>
 <form (ngSubmit)="editById(book.id)">
   <table>
     <tr>
